Update nml-ms/src/main/java/com/mg/nmlonline/domain/model/sector/Sector.java
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>